<resources>
    <string name="app_name">USTH Weather</string>
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="sunny">Sunny</string>
    <string name="windy">Windy</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
</resources>